tests/NormalTests/paczka1/small_fuzzy/32124393.err
Error in line 9: S5 S484 56,4
Error in line 12: x1qk A927 19,4
